src/objects/UnpaidInternReport__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>UnpaidInternReports</relationshipLabel>
        <relationshipName>UnpaidInternReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UnpaidInternReports</relationshipLabel>
        <relationshipName>UnpaidInternReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <label>ContactName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoordinatorId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoordinatorId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UnpaidInternReports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CoordinatorName__c</fullName>
        <label>CoordinatorName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_EthnicGroup__c</fullName>
        <label>D_EthnicGroup</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Gender__c</fullName>
        <label>D_Gender</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_PrimaryLanguage__c</fullName>
        <label>D_PrimaryLanguage</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployerName__c</fullName>
        <label>EmployerName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterviewDate__c</fullName>
        <label>InterviewDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InterviewId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InterviewId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UnpaidInternReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InterviewerName__c</fullName>
        <label>InterviewerName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_10_LessStaff__c</fullName>
        <label>Q_10_LessStaff</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_11_ExpectJob__c</fullName>
        <label>Q_11_ExpectJob</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_12_ClearlyStatedUnpaid__c</fullName>
        <label>Q_12_ClearlyStatedUnpaid</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_13_Schedule__c</fullName>
        <label>Q_13_Schedule</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_14_Shift__c</fullName>
        <label>Q_14_Shift</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_15_WantInvolvement__c</fullName>
        <label>Q_15_WantInvolvement</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_1_License__c</fullName>
        <label>Q_1_License</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_2_InCaLessThan4__c</fullName>
        <label>Q_2_InCaLessThan4</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_3_Student__c</fullName>
        <label>Q_3_Student</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_4_WorkOutside__c</fullName>
        <label>Q_4_WorkOutside</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_5_InternshipAt__c</fullName>
        <label>Q_5_InternshipAt</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_5_Other__c</fullName>
        <label>Q_5_Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_6_GetTraining__c</fullName>
        <label>Q_6_GetTraining</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_7_GetSupervision__c</fullName>
        <label>Q_7_GetSupervision</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_8_UnrelatedTasks__c</fullName>
        <label>Q_8_UnrelatedTasks</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_9_YourWorkBilled__c</fullName>
        <label>Q_9_YourWorkBilled</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>UnpaidInternReport</label>
    <nameField>
        <label>UnpaidInternReport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UnpaidInternReports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>